--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="bi-list"></i>
                 </button>
-                <a class="navbar-brand fw-bold" href="#page-top">{ BVP }</a>
+                <a class="navbar-brand fw-bold" href="#page-top">{BVP}</a>
             
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="#features">Boka</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="#download">Kontakta Oss</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="#download">Om Oss</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="#download">Logga in / Registrera</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-5" href="#features">Boka</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-5" href="#download">Kontakta Oss</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-5" href="#download">Om Oss</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-5" href="#download">Logga in / Registrera</a></li>
                     </ul>
                     <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                         <span class="d-flex align-items-center">
@@ -67,11 +67,11 @@
                                         <stop class="gradient-end-color" offset="100%"></stop>
                                     </linearGradient>
                                 </defs>
-                                <circle cx="50" cy="50" r="50"></circle></svg
-                            ><svg class="shape-1 d-none d-sm-block" viewBox="0 0 240.83 240.83" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="50" cy="50" r="50"></circle></svg>
+                                <svg class="shape-1 d-none d-sm-block" viewBox="0 0 240.83 240.83" xmlns="http://www.w3.org/2000/svg">
                                 <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(120.42 -49.88) rotate(45)"></rect>
-                                <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(-49.88 120.42) rotate(-45)"></rect></svg
-                            ><svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle></svg>
+                                <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(-49.88 120.42) rotate(-45)"></rect></svg>
+                                <svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle></svg>
                             <div class="device-wrapper">
                                 <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
                                     <div class="screen bg-black">
@@ -88,6 +88,22 @@
                 </div>
             </div>
         </header>
+        <main class="masthead">
+            <div class="row">
+                <div class="col-auto">
+                    <a href="#">
+                        <img src="bild1.jpg" width="500"/>
+                        <p>Boka</p>
+                    </a>
+                </div>
+                <div class="col-auto">
+                    <a href="#">
+                        <img src="bild2.jpg" width="500"/>
+                        <p>Registrera</p>
+                    </a>
+                </div>
+            </div>
+        </main>
         <!-- App features section-->
         <!-- Basic features section-->
         <!-- Call to action section-->
