--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
                 <div class="col-auto">
                     <a href="#">
                         <img src="bild1.jpg" width="500"/>
-                        <p>Boka</p>
+                        <div class="">Boka</div>
                     </a>
                 </div>
                 <div class="col-auto">
                     <a href="#">
                         <img src="bild2.jpg" width="500"/>
-                        <p>Registrera</p>
+                        <div class="">Registrera</div>
                     </a>
                 </div>
             </div>
