--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="bi-list"></i>
             </button>
-            <a class="navbar-brand fw-bold" href="#page-top">{BVP}</a>
+            <a class="navbar-brand fw-bold" href="index.html">{BVP}</a>
 
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-                    <li class="nav-item"><a class="nav-link me-lg-5" href="#boka">Boka</a></li>
-                    <li class="nav-item"><a class="nav-link me-lg-5" href="#kontakt">Kontakta Oss</a></li>
-                    <li class="nav-item"><a class="nav-link me-lg-5" href="#om">Om Oss</a></li>
-                    <li class="nav-item"><a class="nav-link me-lg-5" href="#registrera">Logga in / Registrera</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-5" href="boka.html">Boka</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-5" href="kontakt.html">Kontakta Oss</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-5" href="om.html">Om Oss</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-5" href="registrera.html">Logga in / Registrera</a></li>
                 </ul>
                 <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                         <span class="d-flex align-items-center">
@@ -56,20 +56,20 @@
             <div class="col-sm-6">
                 <div class="card">
                   <div class="card-body">
-                      <img src="bild1.jpg" class="card-img-top">
-                    <h5 class="card-title">Special title treatment</h5>
+                      <a href="boka.html"><img src="bild1.jpg" class="card-img-top"><a/>
+                    <h5 class="card-title">Boka en barnvakt</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="boka.html" class="btn btn-primary">Go somewhere</a>
                   </div>
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="card">
                   <div class="card-body">
-                    <img src="bild2.jpg" class="card-img-top">
-                    <h5 class="card-title">Special title treatment</h5>
+                    <a href="registrera.html"><img src="bild2.jpg" class="card-img-top"><a/>
+                    <h5 class="card-title">Registrera dig eller logga in här!</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="registrera.html" class="btn btn-primary">Go somewhere</a>
                   </div>
                 </div>
               </div>
@@ -110,63 +110,6 @@
                     <!-- To make this form functional, sign up at-->
                     <!-- https://startbootstrap.com/solution/contact-forms-->
                     <!-- to get an API token!-->
-                    <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                        <!-- Name input-->
-                        <div class="form-floating mb-3">
-                            <input class="form-control" id="name" type="text" placeholder="Enter your name..."
-                                data-sb-validations="required" />
-                            <label for="name">Full name</label>
-                            <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
-                        </div>
-                        <!-- Email address input-->
-                        <div class="form-floating mb-3">
-                            <input class="form-control" id="email" type="email" placeholder="name@example.com"
-                                data-sb-validations="required,email" />
-                            <label for="email">Email address</label>
-                            <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                            <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                        </div>
-                        <!-- Phone number input-->
-                        <div class="form-floating mb-3">
-                            <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890"
-                                data-sb-validations="required" />
-                            <label for="phone">Phone number</label>
-                            <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.
-                            </div>
-                        </div>
-                        <!-- Message input-->
-                        <div class="form-floating mb-3">
-                            <textarea class="form-control" id="message" type="text"
-                                placeholder="Enter your message here..." style="height: 10rem"
-                                data-sb-validations="required"></textarea>
-                            <label for="message">Message</label>
-                            <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.
-                            </div>
-                        </div>
-                        <!-- Submit success message-->
-                        <!---->
-                        <!-- This is what your users will see when the form-->
-                        <!-- has successfully submitted-->
-                        <div class="d-none" id="submitSuccessMessage">
-                            <div class="text-center mb-3">
-                                <div class="fw-bolder">Form submission successful!</div>
-                                To activate this form, sign up at
-                                <br />
-                                <a
-                                    href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                            </div>
-                        </div>
-                        <!-- Submit error message-->
-                        <!---->
-                        <!-- This is what your users will see when there is-->
-                        <!-- an error submitting the form-->
-                        <div class="d-none" id="submitErrorMessage">
-                            <div class="text-center text-danger mb-3">Error sending message!</div>
-                        </div>
-                        <!-- Submit Button-->
-                        <div class="d-grid"><button class="btn btn-primary rounded-pill btn-lg disabled"
-                                id="submitButton" type="submit">Submit</button></div>
-                    </form>
                 </div>
             </div>
         </div>
