--- a/om.html
+++ b/om.html
@@ -31,14 +31,14 @@
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="bi-list"></i>
             </button>
-            <a class="navbar-brand fw-bold" href="#page-top">{BVP}</a>
+            <a class="navbar-brand fw-bold" href="index.html">{BVP}</a>
 
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-                    <li class="nav-item"><a class="nav-link me-lg-5" href="#boka">Boka</a></li>
-                    <li class="nav-item"><a class="nav-link me-lg-5" href="#kontakt">Kontakta Oss</a></li>
-                    <li class="nav-item"><a class="nav-link me-lg-5" href="#om">Om Oss</a></li>
-                    <li class="nav-item"><a class="nav-link me-lg-5" href="#registrera">Logga in / Registrera</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-5" href="boka.html">Boka</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-5" href="kontakt.html">Kontakta Oss</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-5" href="om.html">Om Oss</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-5" href="registrera.html">Logga in / Registrera</a></li>
                 </ul>
                 <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                         <span class="d-flex align-items-center">
@@ -53,26 +53,7 @@
     <header class="masthead">
         <div class="container">
         <div class="row justify-content-center">
-            <div class="col-sm-6">
-                <div class="card">
-                  <div class="card-body">
-                      <img src="bild1.jpg" class="card-img-top">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="card">
-                  <div class="card-body">
-                    <img src="bild2.jpg" class="card-img-top">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-              </div>
+           
         </div>
     </div>
     </header>
