--- a/sara.html
+++ b/sara.html
@@ -38,7 +38,8 @@
                     <li class="nav-item"><a class="nav-link me-lg-5" href="boka.html">Boka</a></li>
                     <li class="nav-item"><a class="nav-link me-lg-5" href="kontakt.html">Kontakta Oss</a></li>
                     <li class="nav-item"><a class="nav-link me-lg-5" href="om.html">Om Oss</a></li>
-                    <li class="nav-item"><a class="nav-link me-lg-5" href="registrera.html">Logga in / Registrera</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-5" href="registrera.html">Logga in / Registrera</a>
+                    </li>
                 </ul>
                 <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                         <span class="d-flex align-items-center">
@@ -52,10 +53,16 @@
     <!-- Mashead header-->
     <header class="masthead">
         <div class="container">
-        <div class="row justify-content-center">
-        
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+
+                </div>
+                
+                <div class="col-lg-6">
+
+                </div>
+            </div>
         </div>
-    </div>
     </header>
     <!-- App features section-->
     <!-- Basic features section-->
