--- a/boka.html
+++ b/boka.html
@@ -102,8 +102,8 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td><a href="#">Super snälla silver Sara</a></td>
+                        <tr onclick="redirect()" role="button">
+                            <td>Super snälla silver Sara</td>
                             <td>200kr</td>
                             <td>&#9733;&#9733;&#9733;&#9733;&#9734;</td>
                         </tr>
@@ -254,6 +254,9 @@
         function myFunction() {
             var element = document.getElementById("hideElement");
             element.classList.remove("d-none");
+        }
+        function redirect() {
+            location.href = "sara.html";
         }
 
     </script>
