--- a/sara.html
+++ b/sara.html
@@ -178,7 +178,7 @@
 
     <script>
         function bokaformredirect() {
-            location.href = "";
+            location.href = "form.html";
         }
     </script>
 </body>
