--- a/index.html
+++ b/index.html
@@ -56,23 +56,21 @@
             <div class="row justify-content-center">
                 <div class="col-sm-6">
                     <div class="card">
-                        <div class="card-body">
+                        <div class="card-body text-center">
                             <a href="boka.html"><img src="bild1.jpg" class="card-img-top"><a />
                                 <h5 class="card-title">Boka en barnvakt</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="boka.html" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text">Hos oss kan du snabbt och enkelt boka barnvakt. Välj dag och plats sedan kan du välja barnvakten som passar dina barn bäst.</p>
+                                <a href="boka.html" class="btn btn-primary">Boka barnvakt</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="card">
-                        <div class="card-body">
+                        <div class="card-body text-center">
                             <a href="registrera.html"><img src="bild2.jpg" class="card-img-top"><a />
                                 <h5 class="card-title">Registrera dig eller logga in här!</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="registrera.html" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text">För att boka barnvakt måste du skapa ett konto och fylla i uppgifter för att snabbt och smidigare kunna boka barnvakt.</p>
+                                <a href="registrera.html" class="btn btn-primary">Logga in/Registrera</a>
                         </div>
                     </div>
                 </div>
@@ -103,6 +101,11 @@
 
                 <div class="col-sm-4 text-white">
                     <h2>Följ Oss</h5>
+                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-twitter"></i>
+                    <i class="bi bi-linkedin"></i>
+                    <i class="bi bi-instagram"></i>
+
                 </div>
             </div>
             
