--- a/boka.html
+++ b/boka.html
@@ -107,7 +107,7 @@
                     </thead>
                     <tbody>
                         <tr onclick="redirect()" role="button">
-                            <td onclick="redirect()" role="button">Super snälla silver Sara</td>
+                            <td>Super snälla silver Sara</td>
                             <td>200kr</td>
                             <td>&#9733;&#9733;&#9733;&#9733;&#9734;</td>
                         </tr>
