--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@
     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+
+    <script>
+        function redirect() {
+            location.href = "boka.html";
+        }
+        function redirect2() {
+            location.href = "registrera.html";
+        }
+    </script>
 </body>
 
 </html>
