--- a/kontakt.html
+++ b/kontakt.html
@@ -32,7 +32,7 @@
                 <i class="bi-list"></i>
             </button>
             <a class="navbar-brand fw-bold" href="index.html">{BVP}</a>
-            <a href="/registrera.html"><h1 id="account" class="bi bi-person"></h1></a>
+            <a href="/registrera.html"><img id="account" src="account.png" width="95px"></a>
 
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
