--- a/sara.html
+++ b/sara.html
@@ -33,8 +33,7 @@
             </button>
             <a class="navbar-brand fw-bold" href="index.html">{BVP}</a>
             <a href="registrera.html">
-                <h1 id="account" class="navbar-brand bi bi-person fw-bold"></h1>
-            </a>
+                <img id="account" src="account.png" width="95px">            </a>
 
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
