--- a/om.html
+++ b/om.html
@@ -33,7 +33,7 @@
             </button>
             <a class="navbar-brand fw-bold" href="index.html">{BVP}</a>
             <a href="registrera.html">
-                <h1 id="account" class="navbar-brand bi bi-person fw-bold"></h1>
+                <img id="account" src="account.png" width="95px">
             </a>
 
             <div class="collapse navbar-collapse" id="navbarResponsive">
