--- a/om.html
+++ b/om.html
@@ -58,7 +58,7 @@
         <div class="container">
         <div class="row justify-content-center text-danger text-center">
            <h3>Hello</h3>
-           <img class="personImg" src="https://image.invaluable.com/housePhotos/heroesandlegends/69/696369/H22358-L245732942.jpg">
+           <!-- <img class="personImg" src="https://image.invaluable.com/housePhotos/heroesandlegends/69/696369/H22358-L245732942.jpg"> -->
         </div>
     </div>
     </header>
